[gd_scene load_steps=23 format=2]

[ext_resource path="res://Entities/Pod/EyeClosed.png" type="Texture" id=1]
[ext_resource path="res://Entities/Pod/Eye.png" type="Texture" id=2]
[ext_resource path="res://Entities/Pod/Pod2.png" type="Texture" id=3]
[ext_resource path="res://Entities/Pod/Pod1.png" type="Texture" id=4]
[ext_resource path="res://Spaghetti.png" type="Texture" id=5]
[ext_resource path="res://LilitaOne-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://GloriaHallelujah-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Music/WackyIdlings.ogg" type="AudioStream" id=8]
[ext_resource path="res://Levels/Menu.gd" type="Script" id=9]
[ext_resource path="res://SFX/MetalHit.wav" type="AudioStream" id=10]
[ext_resource path="res://Demo2.ogv" type="VideoStream" id=11]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=2]
resource_name = "Go"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Pod1:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 4 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pod2:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pod1:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 199.367, 305.617 ), Vector2( 199.367, 300.716 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Pod2:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.5, 1.5 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 810.677, 301.122 ), Vector2( 810.677, 293.61 ) ]
}

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
size = 50
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 25
extra_spacing_bottom = -16
font_data = ExtResource( 7 )

[sub_resource type="Animation" id=6]
resource_name = "0"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Instructions:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=7]
resource_name = "1"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Instructions:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Instructions/Title:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Instructions/1:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Instructions/2:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Instructions/3:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Instructions/Title2:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=8]
resource_name = "2"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Instructions:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Instructions/Title:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Instructions/1:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Instructions/2:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Instructions/3:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Instructions/Title2:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=9]
resource_name = "3"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Instructions:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Instructions/Title:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Instructions/1:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Instructions/2:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Instructions/3:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Instructions/Title2:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=10]
resource_name = "4"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Instructions:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Instructions/Title:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Instructions/1:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Instructions/2:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Instructions/3:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Instructions/Title2:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/6/type = "method"
tracks/6/path = NodePath("Instructions/Title2/VideoPlayer")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=11]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Music:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -80.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Instructions:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "done"
} ]
}

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
autoplay = true

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -185.0
color = Color( 0.2, 0.156863, 0.329412, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 412.0
margin_bottom = 4.0
color = Color( 0.0862745, 0.0470588, 0.207843, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pod1" type="Sprite" parent="."]
position = Vector2( 199.367, 305.617 )
rotation = 0.0579316
texture = ExtResource( 4 )

[node name="Eye" type="Sprite" parent="Pod1"]
position = Vector2( 38.4116, -14.7213 )
texture = ExtResource( 2 )

[node name="Eye2" type="Sprite" parent="Pod1"]
position = Vector2( 11.7189, -15.5645 )
texture = ExtResource( 2 )

[node name="EyeClosed" type="Sprite" parent="Pod1"]
position = Vector2( 12.3487, -23.7873 )
scale = Vector2( 0.70179, 0.70179 )
texture = ExtResource( 1 )

[node name="Pod2" type="Sprite" parent="."]
position = Vector2( 810.677, 297.366 )
rotation = -0.140455
scale = Vector2( -1, 1 )
texture = ExtResource( 3 )

[node name="Eye" type="Sprite" parent="Pod2"]
position = Vector2( 38.4116, -14.7213 )
texture = ExtResource( 2 )

[node name="Eye2" type="Sprite" parent="Pod2"]
position = Vector2( 11.7189, -15.5645 )
texture = ExtResource( 2 )

[node name="EyeClosed" type="Sprite" parent="Pod2"]
position = Vector2( 12.3487, -23.7873 )
scale = Vector2( 0.70179, 0.70179 )
texture = ExtResource( 1 )

[node name="Spaghetti" type="Sprite" parent="."]
position = Vector2( 512, 477.561 )
scale = Vector2( 1.1742, 1.1742 )
texture = ExtResource( 5 )

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 183.0
custom_fonts/font = SubResource( 1 )
text = "SPINPLAN"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Anim" type="AnimationPlayer" parent="."]
autoplay = "Go"
anims/Go = SubResource( 2 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -166.388
margin_top = -124.887
margin_right = 162.612
margin_bottom = -63.8874
custom_fonts/font = SubResource( 3 )
text = "Click anywhere to play!"
align = 1
valign = 1

[node name="Instructions" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0352941, 0.0156863, 0.0588235, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Instructions"]
visible = false
anchor_right = 1.0
margin_bottom = 135.0
custom_fonts/font = SubResource( 4 )
text = "EXPOSITION"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="Label" parent="Instructions"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -487.0
margin_top = -204.0
margin_right = 489.0
margin_bottom = 244.0
custom_fonts/font = SubResource( 5 )
text = "   Right at the unveil of the world's biggest spaghetti meal, that all the Eggos came to see in their little spaceships, they were presented spaghetti with no meatballs! They were stolen! After months of searching, the biggest suspects were 5 uninhabitted planets, that appeared to have big meatballs inside of them. Yeah, the planets were the robbers.

Click to continue"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2" type="Label" parent="Instructions"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -487.0
margin_top = -204.0
margin_right = 489.0
margin_bottom = 244.0
custom_fonts/font = SubResource( 5 )
text = "   The Eggos had no choice but to wage war against the planets themselves, and return the delicious toppings to their rightful owners.

Click to continue"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3" type="Label" parent="Instructions"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -491.0
margin_top = -204.0
margin_right = 492.0
margin_bottom = 244.0
custom_fonts/font = SubResource( 5 )
text = "   You play as the planets. You pity the poor Eggos. \"How can they be so naïve? Planets aren't living creatures, capable of rational thought!\" - you think to yourselves. Nevertheless, you decide to let them have your \"meatballs\" (which are actually just solid rocks but ok).

Click to continue"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title2" type="Label" parent="Instructions"]
anchor_right = 1.0
margin_bottom = 135.0
custom_fonts/font = SubResource( 4 )
text = "HOW TO PLAY"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="4" type="Label" parent="Instructions/Title2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -491.0
margin_top = 28.5
margin_right = 50.0
margin_bottom = 476.5
custom_fonts/font = SubResource( 5 )
text = "· Drag your mouse over the arrows to spin the planet.
· Get the Eggo combatant to the meatball.
· Don't hit the ground too hard!
· Click twice in the middle of the screen to restart.

Click to finally play"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VideoPlayer" type="VideoPlayer" parent="Instructions/Title2"]
margin_left = 576.0
margin_top = 202.0
margin_right = 984.0
margin_bottom = 454.0
stream = ExtResource( 11 )
volume_db = -80.0

[node name="CanvasModulate" type="CanvasModulate" parent="."]

[node name="Anim2" type="AnimationPlayer" parent="."]
autoplay = "0"
anims/0 = SubResource( 6 )
anims/1 = SubResource( 7 )
anims/2 = SubResource( 8 )
anims/3 = SubResource( 9 )
anims/4 = SubResource( 10 )
anims/5 = SubResource( 11 )

[node name="SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[connection signal="finished" from="Instructions/Title2/VideoPlayer" to="." method="_on_VideoPlayer_finished"]
